--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ES">
     <head>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,300" rel="stylesheet">
@@ -45,7 +45,7 @@
                         <button
                             id="enviar" class="w-full bg-blue-600 px-2 py-5 text-white items-center cursor-not-allowed opacity-50 mr-5 uppercase font-bold items-center flex justify-center" 
                             type="submit">Enviar
-                            <i class="material-icons right text-white ml-3">send</i>
+                            <em class="material-icons right text-white ml-3">send</em>
                         </button>
 
                         <button
@@ -53,7 +53,7 @@
                             class="w-full bg-green-600 px-2 py-5 text-white items-center uppercase font-bold items-center flex justify-center" 
                             type="submit"
                         >Resetear Form
-                                <i class="material-icons right ml-3">delete</i>
+                                <em class="material-icons right ml-3">delete</em>
                         </button>
                 </div>
             </form>
